# llm-evalgate

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: agentic_eval.py  benchmark.py  judge_calibration.py  judge_eval.py  multiple_comparisons.py
src/llm_evalgate/: __init__.py
src/llm_evalgate/agentic/: __init__.py  harness.py  otel.py  trace.py
src/llm_evalgate/agentic/dimensions/: __init__.py  base.py  goal_completion.py  step_efficiency.py  step_progress.py  tool_arg_validity.py  tool_hallucination.py  tool_selection.py  trajectory_coherence.py
src/llm_evalgate/bench/: __init__.py  gate.py  metrics.py  runner.py  stats.py
src/llm_evalgate/bench/datasets/: golden_eval.jsonl
src/llm_evalgate/eval/: __init__.py  dimension.py  harness.py
src/llm_evalgate/eval/dimensions/: __init__.py  factual.py  readability.py
src/llm_evalgate/gate/: __init__.py  __main__.py
src/llm_evalgate/judge/: __init__.py  base.py  calibration.py  consistency.py  correction.py  dimension.py  faithfulness.py  pairwise.py
src/llm_evalgate/reliable/: circuit.py
src/llm_evalkit/: __init__.py
src/llm_evalkit/eval/dimensions/: blocklist.py  schema.py
src/llm_evalkit/reliable/: __init__.py  fallback.py  retry.py
tasks/: todo.md
tasks/specs/: tier1-statistical-gate.md  tier2-coverage.md  tier3-extensions.md
tests/: test_agentic.py  test_bench.py  test_calibration.py  test_consistency.py  test_correction.py  test_dimensions.py  test_faithfulness.py  test_gate.py  test_harness.py  test_judge.py  test_otel.py  test_pairwise.py  test_reliable.py  test_review_routing.py  test_stats.py  test_step_progress.py  test_tool_hallucination.py
tests/fixtures/: otel_agent_run.json
