[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-evalgate"
version = "0.1.1"
description = "Deterministic eval gates and reliability primitives for LLM pipelines"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Lester Leong", email = "lester.leong89@gmail.com" }]
keywords = ["llm", "eval", "evaluation", "reliability", "ai", "agents", "pipeline"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "textstat>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "hatch>=1.12",
]

[project.urls]
Homepage = "https://github.com/LesterALeong/llm-evalgate"
Repository = "https://github.com/LesterALeong/llm-evalgate"
Issues = "https://github.com/LesterALeong/llm-evalgate/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_evalgate"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=llm_evalgate --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
